--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac9068">  <td>21/03/25 10:04:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeapp(org.testng.ITestResult)[pri:0, instance:scripts.DownloadProductdetails@1d8bd0de]">&lt;&lt;closeapp</td> 
-<td>&nbsp;</td>  <td>main@812586739</td>   <td></td> </tr>
-<tr bgcolor="7ed3be">  <td>21/03/25 10:03:33</td>   <td>-63852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DownloadProductdetails.downloaddetails()[pri:0, instance:scripts.DownloadProductdetails@1d8bd0de]">downloaddetails</td> 
-  <td>main@812586739</td>   <td></td> </tr>
-<tr bgcolor="ac9068">  <td>21/03/25 10:02:52</td>   <td>-104328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.openapp()[pri:0, instance:scripts.DownloadProductdetails@1d8bd0de]">&gt;&gt;openapp</td> 
-<td>&nbsp;</td>  <td>main@812586739</td>   <td></td> </tr>
+<tr bgcolor="7ed3be">  <td>21/03/31 19:05:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.testA()[pri:0, instance:scripts.Demo@68567e20]">testA</td> 
+  <td>main@702846463</td>   <td></td> </tr>
 </table>
